app/assets/stylesheets/master.scss
/* ... */
div#content {
  position: relative;
  min-height: $body_min_height; 
  float: left;
  width: percentage(($content_section_width - 16px) / $container_width);
  margin: 1em 0; 
  padding-left: 16px;
  background: $content_bg image-url("content_bg.png") repeat-y 0 0;
}

div#content_header_wrapper {
  border-bottom: 1px solid $sidebar_border;
  padding: 8px 0px 4px 8px;
  position: relative;
  height: 1.4em;
  h2 {
    float: left;
  }
  div.create, div.delete, div.actions {
    text-align: center;
    font-size: calc_em(14px, $base_font_size);
    float: right;
  }
}

div#content_inner_wrapper {
  font-size: calc_em(14px, $base_font_size);
  margin-top: 2px;
  border-top: 1px solid $sidebar_border;
  padding-top: 16px;
}

.breadcrumb {
  padding-bottom: 2em;
}

ul.submenu {
  list-style: none;
  position: absolute;
  right: 0;
  z-index: 222;
  line-height: 1.5;
  li {
    float: left;
    position: relative;
    width: 14em;
    ul {
      padding: 5px 0;
      position: absolute;
      top: 1.4em;
      display: none;
    }
    a:link, a:active, a:visited {
      display: block;
      padding: 5px 5px;
      border: 1px solid $sidebar_border;
      text-decoration: none;
      background-color: #2C2C2C;
    }
    a:hover {
      background-color: #2B2C2C;
      color: $hover_text;
    } 
  }
  li:hover ul { 
    display: block; 
  }
  li.top_menu {
    color: $light_text;
    @include rounded_corners;
    text-shadow: 0px -1px 0 rgba(0, 0, 0, 0.8);
    padding: 4px 20px;
    border: 1px solid rgba(92, 92, 92, 0.5);
    background: #535252;
    background: -moz-linear-gradient(0% 49% 90deg, rgba(44, 44, 44, 1), rgba(44, 44, 44, 1), rgba(44, 44, 44, 0.8) 0%);
    background: -webkit-gradient(linear, 0% 49%, 0% 51%, from(rgba(44, 44, 44, 0.8)), to(rgba(44, 44, 44, 1)));
  }
}

/* forms */

form.site_prop {
  fieldset {
    margin-bottom: 8px;
    label {
      display: block;
      margin-left: calc_em(4px, 14px);
      margin-bottom: calc_em(3px, 14px);
      font-weight: bold;
    }
    input {
      font-size: calc_em(12px, 14px);
      width: 30%;
    }
    input {
      border: none;
      border-right: 1px solid #FFF;
      border-bottom: 1px solid #FFF;
      padding: 4px 8px;
      @include rounded_corners;
      background-image: -webkit-gradient(linear, 0% 0%, 0% 12%, from(#969696), to(#E2E1DF));
      background-image: -moz-linear-gradient(0% 12% 90deg, #E2E1DF, #969696);
      background-color: #E2E1DF;
    }
    textarea {
      border: none;
      border-right: 1px solid #FFF;
      border-bottom: 1px solid #FFF;
      padding: 4px 8px;
      @include rounded_corners;
      background-image: -webkit-gradient(linear, 0% 0%, 0% 5%, from(#969696), to(#E2E1DF));
      background-image: -moz-linear-gradient(0% 5% 90deg, #E2E1DF, #969696);
      background-color: #E2E1DF;
    }
    input:focus, textarea:focus {
      border-right: 1px solid #F2EFEF;
      border-bottom: 1px solid #F2EFEF;
      background: #FFF6BF;
    }
    input[type='checkbox'] {
      width: auto;
    }
  }
  ul.form_fields, ol.form_fields {
    clear: both;
    list-style: none;
    li {
      list-style: none;
      padding-bottom: 8px;
      input[type="radio"]  {
        display: inline;
      }
      p {
        font-style: italic;
        font-size: calc_em(12px, 14px);
        line-height: 1.25;
        margin-left:  calc_em(4px, 14px);
        margin-bottom: 0.3em;
        width: 100%;
      }
      p.label_for {
        font-size: 1em;
        font-style: normal;
        font-weight: bold;

      }
    }
    .inline {
      label {
        display: inline;
      }
      input { 
        width: auto;
      }
    } 
    li:first-child {
      padding-top: 8px;
    }

    div.markItUpHeader li:first-child {
      padding-top: 0;
    }
    li:last-child {
      padding-bottom: 0;
    }
    li.editor_field {
      float: left;
      padding-top: 8px;
    }
  }
  #article_img_url {
    width: 60%;
  }
  div.fields_wrap {
    padding: 0.5em 0;
  }
  .submit, .file_field {
    font-size: 1em;
    color: $light_text;
    @include rounded_corners;
    text-shadow: 0px -1px 0 rgba(0, 0, 0, 0.8);
    padding: 4px 20px;
    border: 1px solid rgba(92, 92, 92, 0.5);
    background: -moz-linear-gradient(0% 49% 90deg, rgba(44, 44, 44, 1), rgba(44, 44, 44, 1), rgba(44, 44, 44, 0.8) 0%);
    background: -webkit-gradient(linear, 0% 49%, 0% 51%, from(rgba(44, 44, 44, 0.8)), to(rgba(44, 44, 44, 1)));
    cursor:pointer;
  }
  .submit:hover, .file_field:hover {
    background: lighten(#000, 10%);
  }
  .cancel {
    font-size: 1em;
    text-decoration: underline;
    margin-left: 0.5em;
  }
  .foldable, .grouping {
    padding: 0 8px 4px 8px;
    margin-bottom: 8px;
    @include rounded_corners;
    background-color: $foldable_bg;
    legend {
      padding: 4px 8px;
      margin-left: - 8px;
      @include rounded_corners_top_left_and_right;
      color: $light_text;
      width: 100%;
      background: $foldable_header;
    }
  }
  .foldable legend:hover {
    cursor: pointer;
  }
  .page_parts {
    background: $foldable_bg image-url("form_legend_bg.png") repeat-x left top;
  }
}

div#page_parts_content_wrapper { width: 100%; }

.img_thumb {
  width: 15%;
}

img.site_asset_thumb, img.theme_asset_thumb {
  display: block;
  margin-bottom: 8px;
  border: 1px solid $sidebar_border;
  
}

img.site_asset_thumb:hover, img.theme_asset_thumb {
  border: 1px solid $hover_text;
}

span.fold_arrow {
  display: inline-block;
  width: 6px;
  height: 9px;
  position: relative;
  left: calc_em(10px, 14px);
  bottom: 1px;
  background: transparent image-url("hs.png") no-repeat 0 0
}

span.action_arrow {
  @extend .fold_arrow;
  width: 9px;
  height: 6px;
  background: transparent image-url("hs.png") no-repeat -10px 0
}
span.rotate {
  -webkit-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -o-transform: rotate(90deg);
  transform: rotate(90deg);
}
/* ... */

